# infinite-series

./: AGENTS.md  BENCHMARKS.md  LANGUAGES.md  LICENSE  Makefile  README.md  REFERENCE.md
golang/: go.mod
golang-primes/: Makefile  README.md
golang-primes/cmd/primes/: main.go
golang-primes/internal/progress/: progress.go
golang-primes/prime/: primes_benchmark_test.go  primes_test.go
golang/cmd/primes/: main.go
golang/internal/progress/: progress.go
golang/prime/: primes.go  primes_benchmark_test.go  primes_test.go
java-primes/: Makefile  README.md
java-primes/src/main/java/net/ultrametrics/primes/: App.java  PrimeGenerator.java
java-primes/src/test/java/net/ultrametrics/primes/: PrimeGeneratorTest.java
python/: .gitignore  AGENTS.md  Makefile  OPTIMIZATIONS.md  PARALLEL.md  README.md  makefile  prime_generator.py  test_generators.py
python-primes/: .gitignore  Makefile  PARALLEL.md  PERFORMANCE.md  README.md  parallel_comparison.py  performance_comparison.py  test_generators.py
rust/: Cargo.toml  Makefile  README.md
rust-fibonacci/: Cargo.toml  Makefile  README.md
rust-fibonacci/src/: lib.rs  main.rs  progress.rs
rust-gui/: .gitignore  CHANGELOG.md  Cargo.toml  EXTENDING.md  Makefile  README.md  Trunk.toml  index.html
rust-gui/src/: app.rs  config.rs  constants.rs  draw_number.rs  export_png.rs  helpers.rs  main.rs  types.rs
rust-gui/src/visualizations/: cone_3d.rs  cube_3d.rs  cube_quadratic_3d.rs  cube_simple_3d.rs  cylinder_3d.rs  density_gradient.rs  dodecahedron_3d.rs  fermats.rs  grid.rs  helix_3d.rs  hexagonal.rs  icosahedron_3d.rs  klein_3d.rs  mobius_3d.rs  mod.rs  params.rs  prime_density.rs  prime_wheel.rs  pyramid_3d.rs  registry.rs  riemann.rs  row.rs  sacks.rs  sacks_mobius.rs  shared_3d.rs  sphere_3d.rs  torus_3d.rs  traits.rs  trefoil_3d.rs  triangular.rs  ulam.rs  ulam_mobius.rs
rust-miller-rabin/: .gitignore  Cargo.toml  Makefile  README.md  benchmark.sh  large_benchmark.sh
rust-miller-rabin/benches/: benchmarks.rs
rust-miller-rabin/src/: bases.rs  error.rs  lib.rs  main.rs  parallel.rs  progress.rs  witness.rs
rust-primes/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
rust-primes/benches/: prime_benchmarks.rs
rust-primes/src/: lib.rs  primes_cli.rs  primes_gui.rs  progress.rs
rust-primes/src/gui/: app.rs  config.rs  draw_number.rs  helpers.rs  mod.rs  types.rs
rust-primes/src/gui/visualizations/: density_gradient.rs  fermats.rs  grid.rs  hexagonal.rs  mod.rs  prime_density.rs  prime_wheel.rs  riemann.rs  row.rs  sacks.rs  sacks_mobius.rs  triangular.rs  ulam.rs  ulam_mobius.rs
rust-primes/tests/: cli_integration.rs
rust-series/: Cargo.toml  Makefile  README.md
rust-series/src/: catalan.rs  collatz.rs  fibonacci.rs  happy.rs  hexagonal.rs  lib.rs  lucas.rs  main.rs  powers.rs  triangular.rs
rust/src/: lib.rs  main.rs  primes_cli.rs  primes_gui.rs  progress.rs
