[package]
name = "fibonacci"
version = "1.0.0"
edition = "2021"
description = "High-performance Fibonacci number generator"
authors = ["Fibonacci Generator"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "fibonacci_cli"
path = "src/main.rs"
