[package]
name = "number-visualizer"
version = "1.0.2"
edition = "2021"
description = "Interactive visualization of number sequences (primes, fibonacci, lucas, triangular, collatz, powers of 2)"

[dependencies]
eframe = "0.31"
primes = { path = "../rust-primes" }
series = { path = "../rust-series" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "visualizer"
path = "src/main.rs"
