[package]
name = "number-visualizer"
version = "1.1.0"
edition = "2021"
description = "Interactive visualization of number sequences (primes, fibonacci, lucas, triangular, collatz, powers of 2)"

[dependencies]
eframe = "0.31"
primes = { path = "../rust-primes" }
series = { path = "../rust-series" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "console", "Window", "Document", "HtmlCanvasElement" ] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bin]]
name = "visualizer"
path = "src/main.rs"
