[package]
name = "miller-rabin-tester"
version = "1.0.0"
edition = "2021"
description = "Miller-Rabin primality tester for very large integers with parallelism"
authors = ["Prime Generator"]

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1