[package]
name = "primes"
version = "1.0.0"
edition = "2021"
description = "High-performance prime number generator"
authors = ["Prime Generator"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
eframe = "0.31"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prime_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "primes_cli"
path = "src/primes_cli.rs"

[[bin]]
name = "primes_gui"
path = "src/primes_gui.rs"
