[package]
name = "primes"
version = "1.0.0"
edition = "2021"
description = "High-performance prime number generator"
authors = ["Prime Generator"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "prime_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "primes_cli"
path = "src/primes_cli.rs"
