[package]
name = "series"
version = "1.0.0"
edition = "2021"
description = "High-performance infinite series generators (fibonacci, lucas, triangular, collatz, powers of 2)"
authors = ["Number Series Generator"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "series_cli"
path = "src/main.rs"
